tests/neg/ghost-var.scala
object Test {
  ghost var i: Int = 1 // error
}
